feat: update product-embroidery

--- a/elements/styles.html
+++ b/elements/styles.html
@@ -146,6 +146,9 @@
     <link rel="preload"    href="{{ asset('css/product' ~ extension ) }}" as="style">
     <link rel="stylesheet" href="{{ asset('css/product' ~ extension ) }}">
 
+    <link rel="preload"    href="{{ asset('css/product-embroidery' ~ extension ) }}" as="style">
+    <link rel="stylesheet" href="{{ asset('css/product-embroidery' ~ extension ) }}">
+
 {% elseif pages.current in ['catalog', 'search'] %}
 
     <link rel="preload"    href="{{ asset('css/catalog' ~ extension ) }}" as="style">
